# swe-bench-validator

./: .gitignore  .test-datapoint-valid-pr  DATA_POINTS.md  README.md  pyproject.toml  swe-bench-docker-architecture.md  task-short.md  task.md
.github/workflows/: lint.yml  validate-datapoints.yml
data_points/: TEST-invalid-datapoint.json  astropy__astropy-11693-valid.json  astropy__astropy-12057.json  astropy__astropy-12318.json  astropy__astropy-12544.json  astropy__astropy-12825.json  astropy__astropy-12842.json  astropy__astropy-12880.json  astropy__astropy-12891.json  astropy__astropy-12907.json  astropy__astropy-12962.json  astropy__astropy-13032.json  astropy__astropy-13033.json  astropy__astropy-13068.json  astropy__astropy-13073.json  astropy__astropy-13075.json  astropy__astropy-13132.json  astropy__astropy-13158.json  astropy__astropy-13162.json  astropy__astropy-13234.json  astropy__astropy-13236.json  astropy__astropy-13306.json  astropy__astropy-13390.json  astropy__astropy-13398.json  astropy__astropy-13404.json  astropy__astropy-13417.json  astropy__astropy-13438.json  astropy__astropy-13453.json  astropy__astropy-13462.json  astropy__astropy-13465.json  astropy__astropy-13469.json  astropy__astropy-13477.json  astropy__astropy-13572.json  astropy__astropy-13579.json  astropy__astropy-13638.json  astropy__astropy-13668.json  astropy__astropy-13731.json  astropy__astropy-13734.json  astropy__astropy-13745.json  astropy__astropy-13803.json  (+2255 more)
scripts/: download_swe_bench.sh  validate_all.sh  validate_changed.sh
swe_bench_downloader/: __init__.py  __main__.py  cli.py  downloader.py
swe_bench_validator/: cli.py  validator.py
