[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workforce-infra"
version = "0.1.0"
description = "Infrastructure tools for agent-based projects with SWE-bench integration"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "swebench>=4.0.4",
]

[project.scripts]
swe-bench-validate = "swe_bench_validator.cli:main"

[tool.setuptools.packages.find]
include = ["swe_bench_downloader*", "swe_bench_validator*", "swe_bench_releaser*"]
exclude = ["tests*", "specs*", "features*", "swe-bench*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "SWE-bench",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from within except - overly strict for our use case
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
